Fix z-index on landing

--- a/frontend/src/components/Landing/Main/Main.module.css
+++ b/frontend/src/components/Landing/Main/Main.module.css
@@ -129,7 +129,7 @@
 .itemEtaps:not(:last-child)::after {
     content: "→";
     position: absolute;
-    z-index: 1000;
+    z-index: 2;
     bottom: 50%;
     right: -10%;
     font-size: 30px;
